# C

./: CMakeLists.txt
include/: fun.c  fun.h  function.h
src/: main.c
